# LAN-reader

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: build.yml
logos/: gos_logo.eps
packaging/: LAN-reader.spec  build_macos.sh  entry.py  gos.icns  lem.spec
scripts/: DOCKER_EDGE_CHECKS.md  e2e_backfill.py  e2e_edge_cases.py  e2e_rem_smoke.py  gui_rem_smoke.py  gui_smoke.py
src/lem/: cli.py  config.py  display.py  rem_cli.py  rem_client.py  runner.py  scan.py  uploader.py
src/lem/devices/: __init__.py  base.py  fake.py  shelly.py  tapo.py
src/lem/gui/: app.py  rem_dialogs.py  scan_dialog.py  workers.py
src/lem/sinks/: base.py  csv_sink.py
src/measure/: cli.py  config.py  display.py  model.py  runner.py  scan.py
src/measure/devices/: __init__.py  fake.py  shelly.py  tapo.py
src/measure/gui/: app.py  scan_dialog.py  workers.py
src/measure/sinks/: base.py  csv_sink.py
tests/: test_parsing.py  test_scan.py  test_uploader.py
