[project]
name = "lem"
version = "0.2.0"
description = "LEM (Local Energy Measurement) — multi-plug LAN power measurement, companion to REM"
requires-python = ">=3.11"
dependencies = [
    "tapo>=0.8.1",
    "rich>=13",
]

[project.optional-dependencies]
shelly = ["aiohttp>=3.9"]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8"]

[project.scripts]
lem = "lem.cli:main"

[project.gui-scripts]
lem-gui = "lem.gui.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lem = ["gui/assets/*.png"]
